chore::+1: fix css && complete style

--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -8,11 +8,9 @@
   --color-white-primary: #fff;
   --color-white-secondary: #f8f8f8;
   --color-gray-primary: #e0e5eb;
-  --color-gray-secondary: #efefef;
-  --color-gray-tertiary: #a0a0a0;
-  --color-gray-fourth: #616161;
+  --color-gray-secondary: #999999;
   --color-black-primary: #000;
-  --color-black-secondary: #212121;
+  --color-black-secondary: #333333;
 
   --color-blue: #333c5f;
   --color-blue-lighten: #576199;
