feat::tada: add button styles

--- a/src/styles/components/common/modal.scss
+++ b/src/styles/components/common/modal.scss
@@ -12,6 +12,7 @@
 }
 
 .modal-container > .container {
+  text-align: left;
   width: 500px;
   border-radius: 10px;
   background-color: var(--color-gray-primary);
