--- a/src/styles/components/loader/loader3.scss
+++ b/src/styles/components/loader/loader3.scss
@@ -9,8 +9,8 @@
   -webkit-animation: loader3 1s infinite;
   animation-delay: (1s / 3);
 }
-.loader3:before,
-.loader3:after {
+.loader3::before,
+.loader3::after {
   content: "";
   position: absolute;
   display: block;
@@ -22,10 +22,10 @@
   transform: translateY(-50%);
   animation: loader3 1s infinite;
 }
-.loader3:before {
+.loader3::before {
   left: -2em;
 }
-.loader3:after {
+.loader3::after {
   right: -2em;
   animation-delay: (1s / 1.5);
 }
