--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,3 +4,10 @@
 @import "styles/components/loader/loader1.scss";
 @import "styles/components/loader/loader2.scss";
 @import "styles/components/loader/loader3.scss";
+
+/*
+* button
+*/
+@import "styles/components/button/button1.scss";
+@import "styles/components/button/button2.scss";
+@import "styles/components/button/button3.scss";
