--- a/src/styles/components/common/code-block-container.scss
+++ b/src/styles/components/common/code-block-container.scss
@@ -4,6 +4,7 @@
   height: 200px;
   margin: 20px;
   border-radius: 20px;
+  text-align: center;
   cursor: pointer;
   box-shadow: -2px -2px 6px rgba(255, 255, 255, 0.6),
     -2px -2px 4px rgba(255, 255, 255, 0.4),
