chore::+1: add loader4

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,6 +4,7 @@
 @import "styles/components/loader/loader1.scss";
 @import "styles/components/loader/loader2.scss";
 @import "styles/components/loader/loader3.scss";
+@import "styles/components/loader/loader4.scss";
 
 /*
 * button
