chore::+1: change css to scss

--- a/src/styles/components/button/button1.scss
+++ b/src/styles/components/button/button1.scss
@@ -5,16 +5,15 @@
   width: 150px;
   padding: 1rem 0;
   font-size: 1.5rem;
-  background: var(--color-blue);
-  color: var(--color-white-primary);
+  background: #333c5f;
+  color: #fff;
   font-weight: bold;
-  -webkit-box-shadow: 0 5px 0 var(--color-blue-lighten);
-  box-shadow: 0 5px 0 var(--color-blue-lighten);
-}
-
-.button1:hover {
-  -webkit-transform: translate(0, 3px);
-  transform: translate(0, 3px);
-  -webkit-box-shadow: 0 2px 0 var(--color-blue-lighten);
-  box-shadow: 0 2px 0 var(--color-blue-lighten);
+  -webkit-box-shadow: 0 5px 0 #576199;
+  box-shadow: 0 5px 0 #576199;
+  &:hover {
+    -webkit-transform: translate(0, 3px);
+    transform: translate(0, 3px);
+    -webkit-box-shadow: 0 2px 0 #576199;
+    box-shadow: 0 2px 0 #576199;
+  }
 }
