--- a/src/styles/components/button/button2.scss
+++ b/src/styles/components/button/button2.scss
@@ -1,8 +1,8 @@
 .button2 {
   padding: 0.75em 2em;
   text-align: center;
-  color: var(--color-blue);
-  border: 2px solid var(--color-blue);
+  color: #333c5f;
+  border: 2px solid #333c5f;
   font-size: 24px;
   border-radius: 0.3em;
   transition: all 0.2s ease-in-out;
@@ -11,24 +11,24 @@
   margin: 65px auto;
   width: 150px;
   padding: 1rem 0;
-}
-.button2::before {
-  content: "";
-  background-color: rgba(255, 255, 255, 0.5);
-  height: 100%;
-  width: 3em;
-  position: absolute;
-  top: 0;
-  left: -4.5em;
-  transform: skewX(-45deg) translateX(0);
-  transition: none;
-}
-.button2:hover {
-  background-color: var(--color-blue);
-  color: #fff;
-  border-bottom: 4px solid darken(#333c5f, 10%);
-}
-.button2:hover::before {
-  transform: skewX(-45deg) translateX(13.5em);
-  transition: all 0.5s ease-in-out;
+  &::before {
+    content: "";
+    background-color: rgba(255, 255, 255, 0.5);
+    height: 100%;
+    width: 3em;
+    position: absolute;
+    top: 0;
+    left: -4.5em;
+    transform: skewX(-45deg) translateX(0);
+    transition: none;
+  }
+  &:hover {
+    background-color: #333c5f;
+    color: #fff;
+    border-bottom: 4px solid darken(#333c5f, 10%);
+    &::before {
+      transform: skewX(-45deg) translateX(13.5em);
+      transition: all 0.5s ease-in-out;
+    }
+  }
 }
