--- a/src/styles/components/button/button3.scss
+++ b/src/styles/components/button/button3.scss
@@ -1,5 +1,5 @@
 .button3 {
-  background: var(--color-blue);
+  background: #333c5f;
   color: #fff;
   border: none;
   position: relative;
@@ -9,30 +9,30 @@
   margin: 65px auto;
   width: 150px;
   padding: 1rem 0;
-}
-.button3:hover {
-  background: #fff;
-  color: var(--color-blue);
-}
-.button3::before,
-.button3::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  right: 0;
-  height: 2px;
-  width: 0;
-  background: var(--color-blue);
-  transition: 0.5s ease all;
-}
-.button3::after {
-  right: inherit;
-  top: inherit;
-  left: 0;
-  bottom: 0;
-}
-.button3:hover::before,
-.button3:hover::after {
-  width: 100%;
-  transition: 1s ease all;
+  &:hover {
+    background: #fff;
+    color: #333c5f;
+    &::before,
+    &::after {
+      width: 100%;
+      transition: 1s ease all;
+    }
+  }
+  &::before,
+  &::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 2px;
+    width: 0;
+    background: #333c5f;
+    transition: 0.5s ease all;
+  }
+  &::after {
+    right: inherit;
+    top: inherit;
+    left: 0;
+    bottom: 0;
+  }
 }
