--- a/src/styles/components/common/header.scss
+++ b/src/styles/components/common/header.scss
@@ -8,7 +8,7 @@
 }
 
 .header > .title {
-  color: var(--color-blue);
+  color: #333c5f;
   display: table-cell;
   vertical-align: middle;
   font-size: 2.5rem;
@@ -30,7 +30,7 @@
   box-sizing: border-box;
   text-decoration: none;
   transition: 0.3s;
-  color: var(--color-blue);
+  color: #333c5f;
   font-weight: bold;
   &:hover {
     box-shadow: -2px -2px 6px rgba(255, 255, 255, 0.6),
@@ -41,8 +41,8 @@
 
 .header > .lists {
   border-radius: 8px;
-  background: var(--color-gray-primary);
-  color: var(--color-blue);
+  background: #e0e5eb;
+  color: #333c5f;
   font-size: 1.3rem;
   box-shadow: -2px -2px 6px rgba(255, 255, 255, 0.6),
     -2px -2px 4px rgba(255, 255, 255, 0.4),
@@ -56,7 +56,7 @@
 }
 
 .header > .lists > .list {
-  border-bottom: 1px solid var(--color-blue);
+  border-bottom: 1px solid #333c5f;
   font-weight: bold;
   margin-bottom: 0.5rem;
   &:hover {
