--- a/src/styles/components/loader/loader1.scss
+++ b/src/styles/components/loader/loader1.scss
@@ -7,29 +7,29 @@
   animation: loader1 1s infinite;
   -webkit-animation: loader1 1s infinite;
   animation-delay: (1s / 3);
-}
-.loader1::before,
-.loader1::after {
-  content: "";
-  position: absolute;
-  display: block;
-  height: 3em;
-  width: 0.75em;
-  background: rgba(255, 255, 255, 0.5);
-  top: 50%;
-  transform: translateY(-50%);
-  animation: loader1 1s infinite;
-}
-.loader1::before {
-  left: -1.3em;
-}
-.loader1::after {
-  left: 1.3em;
-  animation-delay: (1s / 1.5);
+  &::before,
+  &::after {
+    content: "";
+    position: absolute;
+    display: block;
+    height: 3em;
+    width: 0.75em;
+    background: rgba(255, 255, 255, 0.5);
+    top: 50%;
+    transform: translateY(-50%);
+    animation: loader1 1s infinite;
+  }
+  &::before {
+    left: -1.3em;
+  }
+  &::after {
+    left: 1.3em;
+    animation-delay: (1s / 1.5);
+  }
 }
 
 @keyframes loader1 {
   50% {
-    background: var(--color-blue);
+    background: #333c5f;
   }
 }
