--- a/src/styles/components/loader/loader2.scss
+++ b/src/styles/components/loader/loader2.scss
@@ -4,37 +4,40 @@
   content: "";
   width: 0.75em;
   height: 3em;
-  background: var(--color-blue);
+  background: #333c5f;
 }
 .loader2 {
-  color: var(--color-blue);
+  color: #333c5f;
   position: relative;
   margin: 75px auto;
   animation: loader2 1s ease-in-out infinite;
   animation-delay: 0.2s;
-}
-.loader2::before,
-.loader2::after {
-  position: absolute;
-  top: 0;
-  animation: loader2 1s ease-in-out infinite;
+  width: 0.75em;
+  height: 3em;
+  background: #333c5f;
+  &::before,
+  &::after {
+    position: absolute;
+    top: 0;
+    animation: loader2 1s ease-in-out infinite;
+  }
+  &::before {
+    left: -1.3em;
+  }
+  &::after {
+    right: -1.3em;
+    animation-delay: 0.4s;
+  }
 }
 
-.loader2::before {
-  left: -1.3em;
-}
-.loader2::after {
-  right: -1.3em;
-  animation-delay: 0.4s;
-}
 @keyframes loader2 {
   0% {
-    box-shadow: 0 0 var(--color-blue);
+    box-shadow: 0 0 #333c5f;
     height: 3em;
   }
   40% {
-    box-shadow: 0 -1em var(--color-blue);
-    height: 30px;
+    box-shadow: 0 -1em #333c5f;
+    height: 4em;
   }
   80% {
     box-shadow: 0 0;
