--- a/src/styles/components/loader/loader4.scss
+++ b/src/styles/components/loader/loader4.scss
@@ -1,6 +1,6 @@
 .loader4 {
   border: 0.75rem solid rgba(255, 255, 255, 0.5);
-  border-top: 0.75rem solid var(--color-blue);
+  border-top: 0.75rem solid #333c5f;
   border-radius: 50%;
   width: 3.5em;
   height: 3.5em;
