--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,12 +5,13 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: var(--color-gray-primary);
+  background-color: #e0e5eb;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+  text-align: left;
 }
 
 button {
