--- a/src/styles/components/common/modal.scss
+++ b/src/styles/components/common/modal.scss
@@ -22,8 +22,8 @@
 .modal-container > .container > .close {
   position: absolute;
   font-weight: bold;
-  border: 1px solid var(--color-gray-secondary);
-  color: var(--color-gray-secondary);
+  border: 1px solid #333c5f;
+  color: #333c5f;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -36,8 +36,8 @@
   right: 20px;
   cursor: pointer;
   &:hover {
-    background: var(--color-black-secondary);
-    border-color: var(--color-black-secondary);
+    background: #333c5f;
+    border-color: #333c5f;
     color: #fff;
   }
 }
@@ -49,7 +49,14 @@
   background: #333c5f;
   color: #fff;
   border-radius: 0 0 10px 10px;
+  &:hover {
+    opacity: 0.8;
+  }
 }
+
+/*
+* TODO..以下のスタイルがmodal-container内に書かれているのは微妙なのでリファクタする
+*/
 
 .modal-container > .container > .code {
   width: 90%;
@@ -61,9 +68,16 @@
   border: none;
   border-radius: 10px;
   resize: none;
-  background-color: var(--color-black-secondary);
+  background-color: #282c34;
   &:focus {
     border: none;
     outline: 0;
   }
+}
+
+.modal-container > .container > .html {
+  text-align: left;
+  width: 90%;
+  display: inline-block;
+  color: #282c34;
 }
