chore::+1: add button4 && fix button3

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -12,3 +12,4 @@
 @import "styles/components/button/button1.scss";
 @import "styles/components/button/button2.scss";
 @import "styles/components/button/button3.scss";
+@import "styles/components/button/button4.scss";
