--- a/src/styles/components/common/header.scss
+++ b/src/styles/components/common/header.scss
@@ -116,8 +116,11 @@
 .header > .lists {
   border-radius: 8px;
   background: #e0e5eb;
+  display: flex;
+  flex-direction: column;
+  text-align: left;
   color: #333c5f;
-  font-size: 1.3rem;
+  font-size: 1.4rem;
   box-shadow: -2px -2px 6px rgba(255, 255, 255, 0.6),
     -2px -2px 4px rgba(255, 255, 255, 0.4),
     2px 2px 2px rgba(255, 255, 255, 0.05), 2px 2px 4px rgba(0, 0, 0, 0.1);
@@ -134,7 +137,6 @@
 }
 
 .header > .lists > .list {
-  border-bottom: 1px solid #333c5f;
   font-weight: bold;
   margin-bottom: 0.5rem;
   transition: 0.2s;
