feat::tada: add input

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,5 +1,5 @@
 /*
-* loaders
+* loader
 */
 @import "styles/components/loader/loader1.scss";
 @import "styles/components/loader/loader2.scss";
@@ -13,3 +13,8 @@
 @import "styles/components/button/button2.scss";
 @import "styles/components/button/button3.scss";
 @import "styles/components/button/button4.scss";
+
+/*
+* input
+*/
+@import "styles/components/input/input1.scss";
