--- a/src/styles/components/common/modal.scss
+++ b/src/styles/components/common/modal.scss
@@ -13,7 +13,8 @@
 
 .modal-container > .container {
   text-align: left;
-  width: 500px;
+  width: 90%;
+  max-width: 500px;
   border-radius: 10px;
   background-color: #e0e5eb;
   position: absolute;
