feat::tada: add loader5

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,6 +5,7 @@
 @import "styles/components/loader/loader2.scss";
 @import "styles/components/loader/loader3.scss";
 @import "styles/components/loader/loader4.scss";
+@import "styles/components/loader/loader5.scss";
 
 /*
 * button
