--- a/src/styles/components/common/code-block-container.scss
+++ b/src/styles/components/common/code-block-container.scss
@@ -1,4 +1,5 @@
 .code-block-container {
+  position: relative;
   transition: 0.3s;
   width: 200px;
   height: 200px;
@@ -13,5 +14,13 @@
     box-shadow: -6px -6px 14px rgba(255, 255, 255, 0.7),
       -6px -6px 10px rgba(255, 255, 255, 0.5),
       6px 6px 8px rgba(255, 255, 255, 0.075), 6px 6px 10px rgba(0, 0, 0, 0.15);
+  }
+  > .title {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    font-weight: bold;
+    font-size: 1.5rem;
+    color: #333c5f;
   }
 }
