feat::tada: add loader6

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -6,6 +6,7 @@
 @import "styles/components/loader/loader3.scss";
 @import "styles/components/loader/loader4.scss";
 @import "styles/components/loader/loader5.scss";
+@import "styles/components/loader/loader6.scss";
 
 /*
 * button
