--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,6 +7,7 @@
 @import "styles/components/loader/loader4.scss";
 @import "styles/components/loader/loader5.scss";
 @import "styles/components/loader/loader6.scss";
+@import "styles/components/loader/loader7.scss";
 
 /*
 * button
