feat::tada: add loader8

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -8,6 +8,7 @@
 @import "styles/components/loader/loader5.scss";
 @import "styles/components/loader/loader6.scss";
 @import "styles/components/loader/loader7.scss";
+@import "styles/components/loader/loader8.scss";
 
 /*
 * button
