--- a/src/styles/components/common/modal.scss
+++ b/src/styles/components/common/modal.scss
@@ -84,8 +84,8 @@
 .modal-container > .container > .html {
   text-align: left;
   overflow-x: scroll;
-  width: 80%;
-  margin-right: 10%;
+  width: calc(90% - 1.8em);
+  margin-right: 1.8em;
   display: inline-block;
   color: #282c34;
 }
