--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -19,7 +19,7 @@
 @import "styles/components/button/button4.scss";
 @import "styles/components/button/button5.scss";
 @import "styles/components/button/button6.scss";
-// @import "styles/components/button/button7.scss";
+@import "styles/components/button/button7.scss";
 // @import "styles/components/button/button8.scss";
 
 /*
