feat::tada: add input3

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -27,3 +27,9 @@
 */
 @import "styles/components/input/input1.scss";
 @import "styles/components/input/input2.scss";
+@import "styles/components/input/input3.scss";
+@import "styles/components/input/input4.scss";
+@import "styles/components/input/input5.scss";
+@import "styles/components/input/input6.scss";
+@import "styles/components/input/input7.scss";
+@import "styles/components/input/input8.scss";
