--- a/src/styles/components/input/input1.scss
+++ b/src/styles/components/input/input1.scss
@@ -18,7 +18,7 @@
     outline: none;
     padding: 0 10px;
     font-size: 1.2rem;
-    background-color: transparent;
+    background: transparent;
     box-sizing: border-box;
     &:focus + label {
       color: #333c5f;
