feat::tada: add text components

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -29,3 +29,8 @@
 @import "styles/components/input/input2.scss";
 @import "styles/components/input/input3.scss";
 @import "styles/components/input/input4.scss";
+
+/*
+* text
+*/
+@import "styles/components/text/text1.scss";
