feat::tada: add text2

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -34,3 +34,6 @@
 * text
 */
 @import "styles/components/text/text1.scss";
+@import "styles/components/text/text2.scss";
+@import "styles/components/text/text3.scss";
+@import "styles/components/text/text4.scss";
