--- a/src/styles/components/text/text1.scss
+++ b/src/styles/components/text/text1.scss
@@ -7,20 +7,11 @@
 .text1 > span {
   color: transparent;
   animation: text1 2.5s ease-out infinite;
-  &:nth-child(1) {
-    animation-delay: 0.1s;
-  }
-  &:nth-child(2) {
-    animation-delay: 0.2s;
-  }
-  &:nth-child(3) {
-    animation-delay: 0.3s;
-  }
-  &:nth-child(4) {
-    animation-delay: 0.4s;
-  }
-  &:nth-child(5) {
-    animation-delay: 0.5s;
+  @for $i from 1 through 5 {
+    &:nth-child(#{$i + 1}) {
+      $delay: $i * 0.1 + s;
+      animation-delay: $delay;
+    }
   }
 }
 
