--- a/src/styles/components/text/text2.scss
+++ b/src/styles/components/text/text2.scss
@@ -8,20 +8,11 @@
   color: #333c5f;
   opacity: 0;
   animation: text2 2.5s infinite;
-  &:nth-child(1) {
-    animation-delay: 0.1s;
-  }
-  &:nth-child(2) {
-    animation-delay: 0.2s;
-  }
-  &:nth-child(3) {
-    animation-delay: 0.3s;
-  }
-  &:nth-child(4) {
-    animation-delay: 0.4s;
-  }
-  &:nth-child(5) {
-    animation-delay: 0.5s;
+  @for $i from 1 through 5 {
+    &:nth-child(#{$i + 1}) {
+      $delay: $i * 0.1 + s;
+      animation-delay: $delay;
+    }
   }
 }
 
