feat::tada: add text3 and text4

--- a/src/styles/components/text/text3.scss
+++ b/src/styles/components/text/text3.scss
@@ -1,16 +1,18 @@
 .text3 {
-  margin: 60px auto;
+  margin: 40px auto;
   font-size: 3.5rem;
   font-weight: bold;
+  display: flex;
+  justify-content: center;
 }
 
 .text3 > span {
   color: #333c5f;
-  opacity: 0;
-  animation: text2 2.5s infinite;
+  animation: text3 2.5s infinite;
+  -webkit-animation: text3 2.5s ease infinite;
   @for $i from 1 through 5 {
     &:nth-child(#{$i + 1}) {
-      $delay: $i * 0.1 + s;
+      $delay: $i * 0.2 + s;
       animation-delay: $delay;
     }
   }
@@ -18,10 +20,15 @@
 
 @keyframes text3 {
   0% {
+    transform: translate(0, 0);
     opacity: 0;
   }
-  50% {
+  40% {
     opacity: 1;
+  }
+  80% {
+    transform: translate(0, 20px);
+    opacity: 0;
   }
   100% {
     opacity: 0;
