--- a/src/styles/components/text/text1.scss
+++ b/src/styles/components/text/text1.scss
@@ -7,6 +7,7 @@
 .text1 > span {
   color: transparent;
   animation: text1 2.5s ease-out infinite;
+  -webkit-animation: text1 2.5s ease-out infinite;
   @for $i from 1 through 5 {
     &:nth-child(#{$i + 1}) {
       $delay: $i * 0.1 + s;
