--- a/src/styles/components/text/text2.scss
+++ b/src/styles/components/text/text2.scss
@@ -8,6 +8,7 @@
   color: #333c5f;
   opacity: 0;
   animation: text2 2.5s infinite;
+  -webkit-animation: text2 2.5s infinite;
   @for $i from 1 through 5 {
     &:nth-child(#{$i + 1}) {
       $delay: $i * 0.1 + s;
