--- a/src/styles/components/arrow/arrow1.scss
+++ b/src/styles/components/arrow/arrow1.scss
@@ -4,5 +4,6 @@
   height: 2rem;
   border-top: 10px solid #333c5f;
   border-right: 10px solid #333c5f;
+  -webkit-transform: rotate(45deg);
   transform: rotate(45deg);
 }
