--- a/src/styles/components/arrow/arrow3.scss
+++ b/src/styles/components/arrow/arrow3.scss
@@ -12,24 +12,17 @@
     margin: auto;
   }
   &::before {
-    left: 70px;
-    box-sizing: border-box;
-    width: 35px;
-    height: 35px;
-    border: 35px solid transparent;
-    border-left: 35px solid #333c5f;
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
+    left: -20px;
+    width: 50px;
+    height: 10px;
+    background: #333c5f;
   }
   &::after {
-    top: 50px;
-    left: -50px;
-    border: 0 solid transparent;
-    border-left: 25px solid#333c5f;
-    border-radius: 0 0 0 60px;
-    width: 50px;
-    height: 50px;
-    -webkit-transform: rotate(90deg);
-    transform: rotate(90deg);
+    width: 30px;
+    height: 30px;
+    border-top: 10px solid #333c5f;
+    border-right: 10px solid #333c5f;
+    -webkit-transform: rotate(45deg);
+    transform: rotate(45deg);
   }
 }
