--- a/src/styles/components/arrow/arrow4.scss
+++ b/src/styles/components/arrow/arrow4.scss
@@ -22,7 +22,7 @@
     transform: rotate(0deg);
   }
   &::after {
-    top: 50px;
+    top: calc(50% + 50px);
     left: -50px;
     border: 0 solid transparent;
     border-left: 25px solid#333c5f;
