feat::tada: add bubble page

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -45,3 +45,11 @@
 @import "styles/components/arrow/arrow2.scss";
 @import "styles/components/arrow/arrow3.scss";
 @import "styles/components/arrow/arrow4.scss";
+
+/*
+* bubble
+*/
+@import "styles/components/bubble/bubble1.scss";
+@import "styles/components/bubble/bubble2.scss";
+@import "styles/components/bubble/bubble3.scss";
+@import "styles/components/bubble/bubble4.scss";
